################################################################################
# Name       : Makefile
# Author     : Didier Barvaux <didier@barvaux.org>
#              Didier Barvaux <didier.barvaux@toulouse.viveris.com>
# Description: Handle compatibility headers
################################################################################

EXTRA_DIST = \
	dllexport.h \
	net_ethernet.h \
	netinet_in.h \
	netinet_ip6.h \
	netinet_ip.h \
	netinet_udp.h

