################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: create and run the automated functional tests located in subdirs
################################################################################

SUBDIRS = \
	feedback2 \
	decompress_feedback_only \
	context_reuse \
	rtp_uor2_disambiguation \
	rtp_detection

