################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: create and run the automated functional tests located in subdirs
################################################################################

SUBDIRS = \
	feedback2 \
	feedback_ring \
	decompress_feedback_only \
	context_reuse \
	rtp_uo_disambiguation \
	rtp_detection \
	segment

